--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   },
   "dependencies": {
     "@fremtind/jkl-core": "^14.3.0",
+    "@fremtind/jkl-icons": "^10.0.5",
+    "@fremtind/jkl-icons-react": "^9.1.5",
+    "@fremtind/jkl-input-group": "^3.0.18",
+    "@fremtind/jkl-input-group-react": "^3.0.40",
+    "@fremtind/jkl-select": "^11.1.18",
+    "@fremtind/jkl-select-react": "^14.1.50",
+    "@fremtind/jkl-text-input": "^12.1.19",
+    "@fremtind/jkl-text-input-react": "^15.1.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
